[gd_scene load_steps=9 format=2]

[ext_resource path="res://imatges/estrelles/cf4ce046e6c36febdf54eaf5b41ffa1f-icono-de-golpe-de-estrella-38-by-vexels.png" type="Texture" id=1]
[ext_resource path="res://fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/nivell_passat.gd" type="Script" id=3]
[ext_resource path="res://imatges/fons/fons de inici.jpg" type="Texture" id=4]
[ext_resource path="res://Sons i músiques/Menús.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 75
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 33
font_data = ExtResource( 2 )

[node name="nivell_passat" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -66.8074
margin_bottom = -66.8074
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
modulate = Color( 0.529412, 0.454902, 0.454902, 1 )
position = Vector2( 425, 362 )
texture = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -121.0
margin_right = 4.0
margin_bottom = 358.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1028.0
margin_bottom = 479.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1028.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.929412, 1, 0, 1 )
text = "felicitats"
align = 1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 89.0
margin_right = 1028.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
text = "T'has passat el nivell 1"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 139.0
margin_right = 1028.0
margin_bottom = 139.0

[node name="estrella3" type="Sprite" parent="MarginContainer/VBoxContainer/HBoxContainer"]
position = Vector2( 672, 92.8074 )
scale = Vector2( 0.5, 0.57 )
texture = ExtResource( 1 )

[node name="estrella1" type="Sprite" parent="MarginContainer/VBoxContainer/HBoxContainer"]
position = Vector2( 496, 92.8074 )
scale = Vector2( 0.5, 0.57 )
texture = ExtResource( 1 )

[node name="estrella2" type="Sprite" parent="MarginContainer/VBoxContainer/HBoxContainer"]
position = Vector2( 320, 92.8074 )
scale = Vector2( 0.5, 0.57 )
texture = ExtResource( 1 )

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 695.0
margin_top = 106.0
margin_right = -56.0
margin_bottom = 3.0
custom_constants/margin_top = 450
custom_constants/margin_left = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="MarginContainer2"]
margin_left = 100.0
margin_top = 450.0
margin_right = 273.0
margin_bottom = 497.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
text = "Continue"
flat = true
align = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true
[connection signal="pressed" from="MarginContainer2/Continue" to="." method="_on_Continue_pressed"]
